<?xml version="1.0" encoding="utf-8"?>
<layout>

  <data>
    <variable name="order" type="br.com.renannunessil.wirecardtest.data.model.Order"/>
  </data>

  <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                               xmlns:tools="http://schemas.android.com/tools"
                                               xmlns:app="http://schemas.android.com/apk/res-auto"
                                               android:layout_width="match_parent"
                                               android:layout_height="match_parent"
                                               android:background="@color/order_details_background"
  >
    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@android:color/white"
    >
      <TextView
          android:id="@+id/tv_amount"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          tools:text="R$ 100"
          android:includeFontPadding="false"
          android:textSize="25sp"
          android:textColor="@color/amount_color"
          android:layout_marginTop="12dp"
          android:layout_marginStart="16dp"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"/>

      <TextView
          android:id="@+id/tv_own_id"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:includeFontPadding="false"
          android:textSize="14sp"
          tools:text="Lpoi3hIYR5oçi66jHG7u3t5d67I"
          android:text="@{order.ownId}"
          android:layout_marginEnd="16dp"
          app:layout_constraintTop_toTopOf="@id/tv_amount"
          app:layout_constraintBottom_toBottomOf="@id/tv_amount"
          app:layout_constraintEnd_toEndOf="parent"/>

      <TextView
          android:id="@+id/tv_payment_method"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:includeFontPadding="false"
          tools:text="Cartão de Crédito"
          android:textSize="18sp"
          android:textStyle="bold"
          android:textColor="@color/icons_color"
          android:layout_marginBottom="12dp"
          app:layout_constraintStart_toStartOf="@id/tv_amount"
          app:layout_constraintTop_toBottomOf="@id/tv_amount"
          app:layout_constraintBottom_toBottomOf="parent"
      />

      <TextView
          android:id="@+id/tv_order_id"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          tools:text="ORD-31982476981"
          android:text="@{order.id}"
          android:textSize="14sp"
          app:layout_constraintEnd_toEndOf="@id/tv_own_id"
          app:layout_constraintBottom_toBottomOf="@id/tv_payment_method"
      />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_customer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cl_amount"
        android:background="@android:color/white"
    >

      <TextView
          android:id="@+id/tv_customer_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/customer"
          android:textSize="16sp"
          android:textColor="@color/icons_color"
          android:layout_marginTop="25dp"
          android:layout_marginStart="16dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
      />

      <TextView
          android:id="@+id/tv_customer_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:includeFontPadding="false"
          android:textSize="16sp"
          tools:text="Teste Test"
          android:text="@{order.customer.customerName}"
          app:layout_constraintStart_toStartOf="@id/tv_customer_label"
          app:layout_constraintTop_toBottomOf="@id/tv_customer_label"/>

      <TextView
          android:id="@+id/tv_email"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:includeFontPadding="false"
          android:textSize="16sp"
          tools:text="teste@teste.com"
          android:text="@{order.customer.email}"
          android:layout_marginBottom="12dp"
          app:layout_constraintStart_toStartOf="@id/tv_customer_name"
          app:layout_constraintTop_toBottomOf="@id/tv_customer_name"
          app:layout_constraintBottom_toBottomOf="parent"
      />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginTop="0.5dp"
        app:layout_constraintTop_toBottomOf="@id/cl_customer"
    >

      <TextView
          android:id="@+id/tv_created_date_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/created"
          android:textColor="@color/icons_color"
          android:textSize="16sp"
          android:layout_marginTop="20dp"
          android:layout_marginStart="16dp"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"

      />

      <TextView
          android:id="@+id/tv_created_date"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:includeFontPadding="false"
          android:textSize="16sp"
          tools:text="01/01/2001"
          android:layout_marginEnd="16dp"
          android:layout_marginBottom="16dp"
          app:layout_constraintTop_toBottomOf="@id/tv_created_date_label"
          app:layout_constraintStart_toStartOf="@id/tv_created_date_label"
          app:layout_constraintBottom_toBottomOf="parent"
      />

      <TextView
          android:id="@+id/v_center_line"
          android:layout_width="0.5dp"
          android:layout_height="0dp"
          android:background="@color/order_details_background"
          android:layout_marginTop="16dp"
          android:layout_marginBottom="16dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
      />

      <TextView
          android:id="@+id/tv_status_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/status"
          android:textColor="@color/icons_color"
          android:textSize="16sp"
          android:layout_marginStart="16dp"
          app:layout_constraintStart_toEndOf="@id/v_center_line"
          app:layout_constraintTop_toTopOf="@id/tv_created_date_label"
      />

      <TextView
          android:id="@+id/tv_status_date"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:includeFontPadding="false"
          android:textSize="14sp"
          tools:text="01/01/2001"
          android:layout_marginEnd="16dp"
          app:layout_constraintTop_toTopOf="@id/tv_status_label"
          app:layout_constraintBottom_toBottomOf="@id/tv_status_label"
          app:layout_constraintEnd_toEndOf="parent"/>

      <TextView
          android:id="@+id/tv_payment_status"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:includeFontPadding="false"
          tools:text="NAO PAGO"
          tools:textColor="@color/waiting"
          android:textSize="16sp"
          tools:background="@drawable/payment_paid_status_border"
          app:layout_constraintStart_toEndOf="@id/v_center_line"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@id/tv_status_label"
      />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_finance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginTop="0.5dp"
        app:layout_constraintTop_toBottomOf="@id/cl_status"
    >

      <TextView
          android:id="@+id/tv_finance_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/finance"
          android:textSize="16sp"
          android:textColor="@color/icons_color"
          android:layout_marginStart="16dp"
          android:layout_marginTop="25dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
      />

      <TextView
          android:id="@+id/tv_total_amount_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/total_value"
          android:textSize="16sp"
          android:textColor="@color/order_details_background"
          app:layout_constraintStart_toStartOf="@id/tv_finance_label"
          app:layout_constraintTop_toBottomOf="@id/tv_finance_label"
      />

      <TextView
          android:id="@+id/tv_fees_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/fees"
          android:textSize="16sp"
          android:textColor="@color/order_details_background"
          app:layout_constraintStart_toStartOf="@id/tv_finance_label"
          app:layout_constraintTop_toBottomOf="@id/tv_total_amount_label"
      />

      <TextView
          android:id="@+id/tv_liquid_amount_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/liquid_value"
          android:textSize="16sp"
          android:textColor="@color/order_details_background"
          app:layout_constraintStart_toStartOf="@id/tv_finance_label"
          app:layout_constraintTop_toBottomOf="@id/tv_fees_label"
      />

      <TextView
          android:id="@+id/tv_total_amount"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          tools:text="+ R$ 100.00"
          android:textSize="16sp"
          android:textColor="@color/icons_color"
          android:layout_marginEnd="16dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="@id/tv_total_amount_label"
      />

      <TextView
          android:id="@+id/tv_fees"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          tools:text="- R$ 50.00"
          tools:textColor="@color/not_payed"
          android:textSize="16sp"
          app:layout_constraintEnd_toEndOf="@id/tv_total_amount"
          app:layout_constraintTop_toTopOf="@id/tv_fees_label"
      />

      <TextView
          android:id="@+id/tv_liquid_amount"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          tools:text="= R$ 50.00"
          android:textSize="16sp"
          android:textColor="@color/icons_color"
          android:layout_marginBottom="16dp"
          app:layout_constraintEnd_toEndOf="@id/tv_total_amount"
          app:layout_constraintTop_toTopOf="@id/tv_liquid_amount_label"
          app:layout_constraintBottom_toBottomOf="parent"
      />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_payments"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/white"
        android:layout_marginTop="0.5dp"
        app:layout_constraintTop_toBottomOf="@id/cl_finance"
        app:layout_constraintBottom_toBottomOf="parent"
    >

      <TextView
          android:id="@+id/tv_payments_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/payments"
          android:textSize="20sp"
          android:textColor="@color/icons_color"
          android:layout_marginStart="20dp"
          android:layout_marginTop="30dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
      />

      <TextView
          android:id="@+id/tv_total_payments"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          tools:text="1 pagamento"
          android:textSize="16sp"
          android:textColor="@color/icons_color"
          app:layout_constraintBottom_toBottomOf="@id/tv_payments_label"
          app:layout_constraintTop_toTopOf="@id/tv_payments_label"
          app:layout_constraintStart_toEndOf="@id/tv_payments_label"
          app:layout_constraintEnd_toEndOf="parent"
      />

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/cl_order_details_progressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/progressBarBackgroud"
        android:elevation="2dp"
        android:visibility="gone"
        tools:visibility="visible"
    >

      <ProgressBar
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:indeterminateTint="@color/colorAccent"/>

    </android.support.design.widget.CoordinatorLayout>

  </android.support.constraint.ConstraintLayout>
</layout>